2009-07-13  Sam Steingold  <sds@gnu.org>

	* zthread.d (MUTEX-NAME, EXEMPTION-NAME): add
	(check_name_arg): add; use instead of test_stringsymchar_arg to
	allow any names (strings, symbols, integers &c)
	* constsym.d, subr.d (mutex_name, exemption_name): add
	* threads.lisp (MUTEX-NAME, EXEMPTION-NAME): export
	* constobj.d (type_name_arg): add

2009-07-13  Sam Steingold  <sds@gnu.org>

	* constobj.d (printstring_inactive, printstring_recursive): add
	* io.d (pr_unreadably_with_prefix): rename from pr_unreadably and
	accept an optional prefix to print before string
	(pr_unreadably): define using pr_unreadably_with_prefix
	(pr_orecord): print INACTIVE for dead threads
	and RECURSIVE recursive mutexes

2009-07-12  Vladimir Tzankov  <vtzankov@gmail.com>

	[MULTITHREAD]: use per thread value cells in all DYNBIND frames
	* eval.d (progv): use Symbol_thread_value() instead of Symbol_value()
	(bindhooks): ditto
	* control.d (COMPILER-LET): ditto

2009-07-12  Vladimir Tzankov  <vtzankov@gmail.com>

	* threads.lisp (WITH-MUTEX-LOCK): rename WITH-LOCK to WITH-MUTEX-LOCK

2009-07-12  Vladimir Tzankov  <vtzankov@gmail.com>

	fix bug #[ 1472478 ]: Crashing CLISP with finalizers + weak hashtables
	and fix weak references to GC-ed threads objects
	* spvw_garcol.d (gar_col_normal): mark objects to be released after
	weak pointers have been cleaned

2009-07-12  Vladimir Tzankov  <vtzankov@gmail.com>

	* zthread.d (MAKE-THREAD, MAKE-MUTEX, MAKE-EXEMPTION): allow symbols and
	characters for :name argument

2009-07-09  Reini Urban  <rurban@x-ray.at>

	* modules/gtk2/gtk.lisp: "#undef interface" because
	w32api/basetyps.h defines it to "struct" which breaks glade
	declarations like "(GladeInterface *interface)"
	* modules/dbus/dbus.lisp: ditto for "(const char *interface)"

2009-07-09  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (WAIT): use
	begin_want_sigcld/end_want_sigcld around waitpid/wait4;
	return symbols for signals using check_signal_rverse