@@ -1,3 +1,12 @@
+2009-07-14  Sam Steingold  <sds@gnu.org>
+
+	* modules/postgresql/postgresql.lisp (PQexecParams, PQprepare)
+	(PQexecPrepared, PQsendQueryParams, PQsendPrepare)
+	(PQsendQueryPrepared, PQfn, PQescapeByteaConn): use C-ARRAY-PTR
+	instead of C-ARRAY-MAX for :IN parameters
+	Suggested by "Hoehle, Joerg-Cyril" <Joerg-Cyril.Hoehle@t-systems.com>
+	Reported by SOS Sukaeto <sukaeto@gmail.com>
+
 2009-07-13  Sam Steingold  <sds@gnu.org>
 
 	* zthread.d (MUTEX-NAME, EXEMPTION-NAME): add
